fixed squished profile

--- a/packages/react-frontend/src/profile/profilePage.css
+++ b/packages/react-frontend/src/profile/profilePage.css
@@ -59,6 +59,7 @@ html {
     border-color: black;
     border-style: outset;
     margin: 25px;
+    object-fit: cover;
 }
 
 .user-info {
